--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,14 @@
     <div class="container">
 <!-- Header -->   
       <header>
-        <a href="#"><img src="images/mukelogo.png" alt="Mikey Wills Logo" id="logo"></a>
+        <a href="/" title="Home"><img src="images/mukelogo.png" alt="Mikey Wills Logo" id="logo"></a>
 <!-- Nav -->   
         <nav>
           <ul>
-            <li><a href="#" title="">Writing</a></li>
-            <li><a href="#" title="">Reading</a></li>
-            <li><a href="#" title="">Resources</a></li>
-            <li><a href="#" title="">Info</a></li>
+            <li><a href="/writing.html" title="Writing">Writing</a></li>
+            <li><a href="/reading.html" title="Reading">Reading</a></li>
+            <li><a href="/resources.html" title="Resources">Resources</a></li>
+            <li><a href="/info.html" title="Info">Info</a></li>
           </ul>
         </nav>
       </header>
