--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,6 +8,7 @@
 /* --------------------------------------------------------------------
    Layout
 -------------------------------------------------------------------- */
+
 /* Base */
 
 .container {
@@ -18,7 +19,7 @@ section, article, header, footer {
   @include span-columns(12 omega);
 }
 
-/* Head */
+/* Header */
 
 header {
   text-align: center;
@@ -57,20 +58,6 @@ nav {
   }
 }
 
-/* Home */
-
-section.home img {
-  margin-bottom: 2em;
-}
-
-article.bio {
-  text-align: center;
-  h2 {
-    font-style: italic;
-    @include dash-tail;
-  }
-}
-
 /* Footer */
 
 footer {
@@ -90,6 +77,24 @@ footer {
     display: block;
   }
 }
+
+
+/* --------------------------------------------------------------------
+   Home Page
+-------------------------------------------------------------------- */
+
+section.home img {
+  margin-bottom: 2em;
+}
+
+article.bio {
+  text-align: center;
+  h2 {
+    font-style: italic;
+    @include dash-tail;
+  }
+}
+
 
 /* --------------------------------------------------------------------
    Media Queries
