--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -152,7 +152,7 @@ a:hover {
    Layout
 -------------------------------------------------------------------- */
 /* Base */
-/* line 13, ../sass/screen.scss */
+/* line 14, ../sass/screen.scss */
 .container {
   *zoom: 1;
   max-width: 29.5em;
@@ -169,7 +169,7 @@ a:hover {
   clear: both;
 }
 
-/* line 17, ../sass/screen.scss */
+/* line 18, ../sass/screen.scss */
 section, article, header, footer {
   width: 100%;
   float: right;
@@ -178,14 +178,14 @@ section, article, header, footer {
   display: inline;
 }
 
-/* Head */
-/* line 23, ../sass/screen.scss */
+/* Header */
+/* line 24, ../sass/screen.scss */
 header {
   text-align: center;
   padding: 1em 0;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 29, ../sass/screen.scss */
 img#logo {
   position: absolute;
   top: 1em;
@@ -195,7 +195,7 @@ img#logo {
   -o-transition: all .25s ease-in;
   transition: all .25s ease-in;
 }
-/* line 34, ../sass/screen.scss */
+/* line 35, ../sass/screen.scss */
 img#logo:hover {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -204,7 +204,7 @@ img#logo:hover {
   transform: rotate(180deg);
 }
 
-/* line 39, ../sass/screen.scss */
+/* line 40, ../sass/screen.scss */
 nav {
   font-size: 0.9em;
   line-height: 1.778em;
@@ -212,50 +212,27 @@ nav {
   border-bottom: 1px dashed #cccccc;
   margin-bottom: 1em;
 }
-/* line 44, ../sass/screen.scss */
+/* line 45, ../sass/screen.scss */
 nav ul li {
   display: inline-block;
   margin-right: 1em;
 }
-/* line 47, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 nav ul li:last-child {
   margin-right: 0;
 }
-/* line 51, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
 nav a {
   color: #222222;
 }
-/* line 53, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 nav a:hover {
   color: #ff3300;
   text-decoration: none;
 }
 
-/* Home */
-/* line 62, ../sass/screen.scss */
-section.home img {
-  margin-bottom: 2em;
-}
-
-/* line 66, ../sass/screen.scss */
-article.bio {
-  text-align: center;
-}
-/* line 68, ../sass/screen.scss */
-article.bio h2 {
-  font-style: italic;
-}
-/* line 58, ../sass/_base.scss */
-article.bio h2::after {
-  content: ' ';
-  display: block;
-  width: 10em;
-  border-top: 1px dashed #cccccc;
-  margin: 1em auto 1em auto;
-}
-
 /* Footer */
-/* line 76, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 footer {
   margin-top: 0.8em;
   padding-top: 1.2em;
@@ -267,14 +244,14 @@ footer {
   border-top: 1px dashed #cccccc;
   color: #666666;
 }
-/* line 82, ../sass/screen.scss */
+/* line 69, ../sass/screen.scss */
 footer div {
   width: 66.102%;
   float: left;
   margin-right: 1.695%;
   display: inline;
 }
-/* line 84, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
 footer div:last-child {
   width: 32.203%;
   float: right;
@@ -283,9 +260,34 @@ footer div:last-child {
   display: inline;
   text-align: right;
 }
-/* line 89, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 footer span {
   display: block;
+}
+
+/* --------------------------------------------------------------------
+   Home Page
+-------------------------------------------------------------------- */
+/* line 86, ../sass/screen.scss */
+section.home img {
+  margin-bottom: 2em;
+}
+
+/* line 90, ../sass/screen.scss */
+article.bio {
+  text-align: center;
+}
+/* line 92, ../sass/screen.scss */
+article.bio h2 {
+  font-style: italic;
+}
+/* line 58, ../sass/_base.scss */
+article.bio h2::after {
+  content: ' ';
+  display: block;
+  width: 10em;
+  border-top: 1px dashed #cccccc;
+  margin: 1em auto 1em auto;
 }
 
 /* --------------------------------------------------------------------
@@ -307,24 +309,24 @@ footer span {
     line-height: 1.476em;
   }
 
-  /* line 112, ../sass/screen.scss */
+  /* line 117, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 115, ../sass/screen.scss */
+  /* line 120, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 119, ../sass/screen.scss */
+  /* line 124, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.409em;
   }
 
-  /* line 120, ../sass/screen.scss */
+  /* line 125, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.192em;
@@ -338,7 +340,7 @@ footer span {
     line-height: 1.5em;
   }
 
-  /* line 129, ../sass/screen.scss */
+  /* line 134, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
