Added all other pages with "Coming Soon" placeholder

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -95,6 +95,16 @@ article.bio {
   }
 }
 
+/* --------------------------------------------------------------------
+   Misc
+-------------------------------------------------------------------- */
+
+article.coming-soon h1 {
+  @include trailer();
+  text-align: center;
+  color: $grey;
+  @include text-shadow($grey-shdw 0px -1px 0);
+}
 
 /* --------------------------------------------------------------------
    Media Queries
