--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -63,15 +63,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* Base Grid */
-/* Typography */
+/* --------------------------------------------------------------------
+   Base Grid
+-------------------------------------------------------------------- */
+/* --------------------------------------------------------------------
+   Typography
+-------------------------------------------------------------------- */
+/* Vertical Rhythm */
 /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
 html {
   font-size: 187.5%;
   line-height: 1.6em;
 }
 
-/* line 27, ../sass/_base.scss */
+/* Fonts */
+/* Sizing */
+/* line 37, ../sass/_base.scss */
 h1 {
   font-size: 2.5em;
   line-height: 1.28em;
@@ -79,34 +86,40 @@ h1 {
   font-weight: 700;
 }
 
-/* line 28, ../sass/_base.scss */
+/* line 38, ../sass/_base.scss */
 h2 {
   font-size: 1.467em;
   line-height: 1.091em;
 }
 
-/* line 29, ../sass/_base.scss */
+/* line 39, ../sass/_base.scss */
 h3 {
   font-size: 1.2em;
   line-height: 1.333em;
 }
 
-/* line 31, ../sass/_base.scss */
+/* line 41, ../sass/_base.scss */
 p {
   margin-bottom: 1.6em;
 }
 
-/* line 35, ../sass/_base.scss */
+/* line 45, ../sass/_base.scss */
 em {
   font-size: 0.867em;
   line-height: 1.846em;
   font-style: italic;
 }
 
-/* Colors */
-/* Mixins */
-/* Global Styles */
-/* line 69, ../sass/_base.scss */
+/* --------------------------------------------------------------------
+   Colors
+-------------------------------------------------------------------- */
+/* --------------------------------------------------------------------
+   Mixins
+-------------------------------------------------------------------- */
+/* --------------------------------------------------------------------
+   Global
+-------------------------------------------------------------------- */
+/* line 86, ../sass/_base.scss */
 body {
   font-family: "Adobe Garamond Pro", serif;
   -webkit-font-smoothing: antialiased;
@@ -115,12 +128,12 @@ body {
   border-top: 0.2em solid #ff3300;
 }
 
-/* line 77, ../sass/_base.scss */
+/* line 94, ../sass/_base.scss */
 img, object {
   max-width: 100%;
 }
 
-/* line 81, ../sass/_base.scss */
+/* line 98, ../sass/_base.scss */
 a {
   color: #ff3300;
   text-decoration: none;
@@ -130,18 +143,18 @@ a {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 85, ../sass/_base.scss */
+/* line 102, ../sass/_base.scss */
 a:hover {
   text-decoration: underline;
 }
 
-/* line 90, ../sass/_base.scss */
+/* line 107, ../sass/_base.scss */
 ::selection {
   background: #cccccc;
   /* Safari */
 }
 
-/* line 93, ../sass/_base.scss */
+/* line 110, ../sass/_base.scss */
 ::-moz-selection {
   background: #cccccc;
   /* Firefox */
@@ -281,13 +294,24 @@ article.bio {
 article.bio h2 {
   font-style: italic;
 }
-/* line 58, ../sass/_base.scss */
+/* line 73, ../sass/_base.scss */
 article.bio h2::after {
   content: ' ';
   display: block;
   width: 10em;
   border-top: 1px dashed #cccccc;
   margin: 1em auto 1em auto;
+}
+
+/* --------------------------------------------------------------------
+   Misc
+-------------------------------------------------------------------- */
+/* line 102, ../sass/screen.scss */
+article.coming-soon h1 {
+  margin-bottom: 1.6em;
+  text-align: center;
+  color: #cccccc;
+  text-shadow: #aaaaaa 0px -1px 0;
 }
 
 /* --------------------------------------------------------------------
@@ -309,24 +333,24 @@ article.bio h2::after {
     line-height: 1.476em;
   }
 
-  /* line 117, ../sass/screen.scss */
+  /* line 127, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 120, ../sass/screen.scss */
+  /* line 130, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 124, ../sass/screen.scss */
+  /* line 134, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.409em;
   }
 
-  /* line 125, ../sass/screen.scss */
+  /* line 135, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.192em;
@@ -340,7 +364,7 @@ article.bio h2::after {
     line-height: 1.5em;
   }
 
-  /* line 134, ../sass/screen.scss */
+  /* line 144, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
