--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
   <head>
     <title> {% if page.title %} {{ page.title }} | {% endif %} Mikey Wills</title>
     <link rel="stylesheet" type="text/css" media="screen, projection" href="/stylesheets/screen.css" />
+<!-- Typekit -->   
+    <script type="text/javascript" src="http://use.typekit.com/ogx4moy.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
