Resolved h2.emote weight issue

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -39,7 +39,7 @@ h2 { @include adjust-font-size-to(44px); font-family: $title; font-weight: 900;}
 h3 { @include adjust-font-size-to(36px); font-family: $title; font-weight: 900;}
 h3 { @include adjust-font-size-to(32px); font-family: $title; font-weight: 400;}
 
-.emote { font-family: $longform; font-style: italic; }
+.emote { font-family: $longform; font-weight: 400; font-style: italic; }
 
 /* --------------------------------------------------------------------
    Colors
