--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,20 @@
     <script type="text/javascript" src="http://use.typekit.com/ogx4moy.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- Analytics -->       
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-33507363-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </head>
   <body>
     <div class="container">
