--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -70,9 +70,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
    Typography
 -------------------------------------------------------------------- */
 /* Vertical Rhythm */
-/* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-html {
+/* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+* html {
   font-size: 187.5%;
+}
+
+/* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+html {
+  font-size: 30px;
   line-height: 1.6em;
 }
 
@@ -88,8 +93,8 @@ h1 {
 
 /* line 38, ../sass/_base.scss */
 h2 {
-  font-size: 1.467em;
-  line-height: 1.091em;
+  font-size: 1.533em;
+  line-height: 2.087em;
   font-family: "freight-sans-pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 900;
 }
@@ -103,7 +108,7 @@ h3 {
 }
 
 /* line 40, ../sass/_base.scss */
-h3 {
+h4 {
   font-size: 1.067em;
   line-height: 1.5em;
   font-family: "freight-sans-pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -146,7 +151,6 @@ a {
   text-decoration: none;
   -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
-  -ms-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
@@ -194,7 +198,7 @@ em {
   padding-left: 1.75em;
   padding-right: 1.75em;
 }
-/* line 38, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .container:after {
   content: "";
   display: table;
@@ -307,15 +311,15 @@ section.home img {
 }
 
 /* line 91, ../sass/screen.scss */
-article.bio {
+article.hi {
   text-align: center;
 }
 /* line 93, ../sass/screen.scss */
-article.bio h2 {
+article.hi h2 {
   font-style: italic;
 }
 /* line 67, ../sass/_base.scss */
-article.bio h2::after {
+article.hi h2::after {
   content: ' ';
   display: block;
   width: 10em;
@@ -324,9 +328,29 @@ article.bio h2::after {
 }
 
 /* --------------------------------------------------------------------
-   Misc
+   Info Page
 -------------------------------------------------------------------- */
 /* line 103, ../sass/screen.scss */
+div.face {
+  width: 23.729%;
+  float: left;
+  margin-right: 1.695%;
+  display: inline;
+}
+
+/* line 107, ../sass/screen.scss */
+div.bio {
+  width: 74.576%;
+  float: right;
+  margin-right: 0;
+  #margin-left: -0.5em;
+  display: inline;
+}
+
+/* --------------------------------------------------------------------
+   Misc
+-------------------------------------------------------------------- */
+/* line 115, ../sass/screen.scss */
 article.coming-soon h1 {
   margin-bottom: 1.6em;
   text-align: center;
@@ -339,38 +363,48 @@ article.coming-soon h1 {
 -------------------------------------------------------------------- */
 /* < 1700px */
 @media screen and (max-width: 1700px) {
-  /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-  html {
+  /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  * html {
     font-size: 150%;
+  }
+
+  /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  html {
+    font-size: 24px;
     line-height: 1.5em;
   }
 }
 /* < 825px */
 @media screen and (max-width: 875px) {
-  /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-  html {
+  /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  * html {
     font-size: 131.25%;
+  }
+
+  /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  html {
+    font-size: 21px;
     line-height: 1.476em;
   }
 
-  /* line 128, ../sass/screen.scss */
+  /* line 140, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 131, ../sass/screen.scss */
+  /* line 143, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 135, ../sass/screen.scss */
+  /* line 147, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.409em;
   }
 
-  /* line 136, ../sass/screen.scss */
+  /* line 148, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.192em;
@@ -378,13 +412,18 @@ article.coming-soon h1 {
 }
 /* < 490px */
 @media screen and (max-width: 490px) {
-  /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-  html {
+  /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  * html {
     font-size: 112.5%;
+  }
+
+  /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  html {
+    font-size: 18px;
     line-height: 1.5em;
   }
 
-  /* line 145, ../sass/screen.scss */
+  /* line 157, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
