Info page layout and add Recent Work section

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,7 +37,7 @@ $longform: "adobe-garamond-pro", Georgia, serif;
 h1 { @include adjust-font-size-to(75px); font-family: $title; font-weight: 900;}
 h2 { @include adjust-font-size-to(46px); font-family: $title; font-weight: 900;}
 h3 { @include adjust-font-size-to(36px); font-family: $title; font-weight: 900;}
-h4 { @include adjust-font-size-to(32px); font-family: $title; font-weight: 400;}
+h4 { @include adjust-font-size-to(26px); font-family: $title; font-weight: 400;}
 
 .emote { font-family: $longform; font-weight: 400; font-style: italic; }
 
@@ -63,11 +63,11 @@ $white: #FDFDFD;
   transition: all .25s ease-in;
 }
 
-@mixin dash-tail {
+@mixin dash-tail($width) {
   &::after {
     content: ' ';
     display: block;
-    width: 10em;
+    width: $width;
     border-top: 1px dashed $grey;
     margin: 1em auto 1em auto;
   }
