--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -92,7 +92,7 @@ article.hi {
   text-align: center;
   h2 {
     font-style: italic;
-    @include dash-tail;
+    @include dash-tail(10em);
   }
 }
 
@@ -100,12 +100,33 @@ article.hi {
    Info Page
 -------------------------------------------------------------------- */
 
-div.face {
-  @include span-columns(3);
+.bio {
+  @include span-columns(12 omega);
+  @include dash-tail(100%);
+  text-align: center;
+  p {
+    text-align: left;
+  }
+  img.face {
+    width: 11em;
+    opacity: 0.75;
+    @include transition-duration(0.2s);
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
 
-div.bio {
-  @include span-columns(9 omega);
+.recent-projects {
+  h2 {
+    text-align: center;
+  }
+  @include trailer();
+}
+
+.project {
+  @include span-columns(4);
+  &:nth-child(3n) { @include omega; } // every third project completes a row.
 }
 
 /* --------------------------------------------------------------------
