--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -70,14 +70,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
    Typography
 -------------------------------------------------------------------- */
 /* Vertical Rhythm */
-/* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-* html {
-  font-size: 187.5%;
-}
-
-/* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+/* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
 html {
-  font-size: 30px;
+  font-size: 187.5%;
   line-height: 1.6em;
 }
 
@@ -109,8 +104,8 @@ h3 {
 
 /* line 40, ../sass/_base.scss */
 h4 {
-  font-size: 1.067em;
-  line-height: 1.5em;
+  font-size: 0.867em;
+  line-height: 1.846em;
   font-family: "freight-sans-pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 400;
 }
@@ -151,6 +146,7 @@ a {
   text-decoration: none;
   -webkit-transition-duration: 0.2s;
   -moz-transition-duration: 0.2s;
+  -ms-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
@@ -198,7 +194,7 @@ em {
   padding-left: 1.75em;
   padding-right: 1.75em;
 }
-/* line 38, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
 .container:after {
   content: "";
   display: table;
@@ -331,16 +327,59 @@ article.hi h2::after {
    Info Page
 -------------------------------------------------------------------- */
 /* line 103, ../sass/screen.scss */
-div.face {
-  width: 23.729%;
+.bio {
+  width: 100%;
+  float: right;
+  margin-right: 0;
+  #margin-left: -0.5em;
+  display: inline;
+  text-align: center;
+}
+/* line 67, ../sass/_base.scss */
+.bio::after {
+  content: ' ';
+  display: block;
+  width: 100%;
+  border-top: 1px dashed #cccccc;
+  margin: 1em auto 1em auto;
+}
+/* line 107, ../sass/screen.scss */
+.bio p {
+  text-align: left;
+}
+/* line 110, ../sass/screen.scss */
+.bio img.face {
+  width: 11em;
+  opacity: 0.75;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -ms-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+/* line 114, ../sass/screen.scss */
+.bio img.face:hover {
+  opacity: 1;
+}
+
+/* line 120, ../sass/screen.scss */
+.recent-projects {
+  margin-bottom: 1.6em;
+}
+/* line 121, ../sass/screen.scss */
+.recent-projects h2 {
+  text-align: center;
+}
+
+/* line 127, ../sass/screen.scss */
+.project {
+  width: 32.203%;
   float: left;
   margin-right: 1.695%;
   display: inline;
 }
-
-/* line 107, ../sass/screen.scss */
-div.bio {
-  width: 74.576%;
+/* line 129, ../sass/screen.scss */
+.project:nth-child(3n) {
   float: right;
   margin-right: 0;
   #margin-left: -0.5em;
@@ -350,7 +389,7 @@ div.bio {
 /* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
-/* line 115, ../sass/screen.scss */
+/* line 136, ../sass/screen.scss */
 article.coming-soon h1 {
   margin-bottom: 1.6em;
   text-align: center;
@@ -363,48 +402,38 @@ article.coming-soon h1 {
 -------------------------------------------------------------------- */
 /* < 1700px */
 @media screen and (max-width: 1700px) {
-  /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-  * html {
-    font-size: 150%;
-  }
-
-  /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   html {
-    font-size: 24px;
+    font-size: 150%;
     line-height: 1.5em;
   }
 }
 /* < 825px */
 @media screen and (max-width: 875px) {
-  /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-  * html {
-    font-size: 131.25%;
-  }
-
-  /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   html {
-    font-size: 21px;
+    font-size: 131.25%;
     line-height: 1.476em;
   }
 
-  /* line 140, ../sass/screen.scss */
+  /* line 161, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 143, ../sass/screen.scss */
+  /* line 164, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 147, ../sass/screen.scss */
+  /* line 168, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.409em;
   }
 
-  /* line 148, ../sass/screen.scss */
+  /* line 169, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.192em;
@@ -412,18 +441,13 @@ article.coming-soon h1 {
 }
 /* < 490px */
 @media screen and (max-width: 490px) {
-  /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-  * html {
-    font-size: 112.5%;
-  }
-
-  /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+  /* line 66, ../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.13.alpha.0/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   html {
-    font-size: 18px;
+    font-size: 112.5%;
     line-height: 1.5em;
   }
 
-  /* line 157, ../sass/screen.scss */
+  /* line 178, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
