--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -344,10 +344,11 @@ article.hi h2::after {
   margin: 1em auto 1em auto;
 }
 /* line 107, ../sass/screen.scss */
-.bio p {
-  text-align: left;
+.bio h1 {
+  display: block;
+  width: 100%;
 }
-/* line 110, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 .bio img.face {
   width: 11em;
   opacity: 0.75;
@@ -357,28 +358,32 @@ article.hi h2::after {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 114, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 .bio img.face:hover {
   opacity: 1;
 }
+/* line 119, ../sass/screen.scss */
+.bio p {
+  text-align: left;
+}
 
-/* line 120, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 .recent-projects {
   margin-bottom: 1.6em;
 }
-/* line 121, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 .recent-projects h2 {
   text-align: center;
 }
 
-/* line 127, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 .project {
   width: 32.203%;
   float: left;
   margin-right: 1.695%;
   display: inline;
 }
-/* line 129, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 .project:nth-child(3n) {
   float: right;
   margin-right: 0;
@@ -389,7 +394,7 @@ article.hi h2::after {
 /* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
-/* line 136, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 article.coming-soon h1 {
   margin-bottom: 1.6em;
   text-align: center;
@@ -416,24 +421,24 @@ article.coming-soon h1 {
     line-height: 1.476em;
   }
 
-  /* line 161, ../sass/screen.scss */
+  /* line 165, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 164, ../sass/screen.scss */
+  /* line 168, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 168, ../sass/screen.scss */
+  /* line 172, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.409em;
   }
 
-  /* line 169, ../sass/screen.scss */
+  /* line 173, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.192em;
@@ -447,7 +452,7 @@ article.coming-soon h1 {
     line-height: 1.5em;
   }
 
-  /* line 178, ../sass/screen.scss */
+  /* line 182, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
