--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -347,8 +347,10 @@ article.hi h2::after {
 .bio h1 {
   display: block;
   width: 100%;
+  color: #cccccc;
+  text-shadow: #aaaaaa 0px -1px 0;
 }
-/* line 111, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 .bio img.face {
   width: 11em;
   opacity: 0.75;
@@ -358,32 +360,32 @@ article.hi h2::after {
   -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
-/* line 115, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 .bio img.face:hover {
   opacity: 1;
 }
-/* line 119, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 .bio p {
   text-align: left;
 }
 
-/* line 124, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 .recent-projects {
   margin-bottom: 1.6em;
 }
-/* line 125, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 .recent-projects h2 {
   text-align: center;
 }
 
-/* line 131, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 .project {
   width: 32.203%;
   float: left;
   margin-right: 1.695%;
   display: inline;
 }
-/* line 133, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 .project:nth-child(3n) {
   float: right;
   margin-right: 0;
@@ -394,7 +396,7 @@ article.hi h2::after {
 /* --------------------------------------------------------------------
    Misc
 -------------------------------------------------------------------- */
-/* line 140, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 article.coming-soon h1 {
   margin-bottom: 1.6em;
   text-align: center;
@@ -421,24 +423,24 @@ article.coming-soon h1 {
     line-height: 1.476em;
   }
 
-  /* line 165, ../sass/screen.scss */
+  /* line 167, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 168, ../sass/screen.scss */
+  /* line 170, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 172, ../sass/screen.scss */
+  /* line 174, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
     line-height: 1.409em;
   }
 
-  /* line 173, ../sass/screen.scss */
+  /* line 175, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
     line-height: 1.192em;
@@ -452,7 +454,7 @@ article.coming-soon h1 {
     line-height: 1.5em;
   }
 
-  /* line 182, ../sass/screen.scss */
+  /* line 184, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
