Fix CSS comments

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,11 +1,11 @@
-// ---------------------------------------------------------------------------
-// Imports
+/* --------------------------------------------------------------------
+   Imports
+-------------------------------------------------------------------- */
 
 @import "compass/reset";
 @import "susy";
 @import "compass";
 
-// ---------------------------------------------------------------------------
 /* --------------------------------------------------------------------
    Base Grid
 -------------------------------------------------------------------- */
