--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,9 +1,8 @@
-// ---------------------------------------------------------------------------
-// Imports
+/* --------------------------------------------------------------------
+   Imports
+-------------------------------------------------------------------- */
 
 @import "base";
-
-/* -------------------------------------------------------------------------*/
 
 /* --------------------------------------------------------------------
    Layout
